--- a/src/App.css
+++ b/src/App.css
@@ -2,26 +2,6 @@
   text-align: center;
   width: 80%;
   margin: auto;
+  padding: 40px;
 }
-.main{
-  display: flex;
-  flex-direction: column;
-}
-button{
-  width: 200px;
-margin-top: 50px;
-}
-.info__conteiner{
-  display: flex;
-  flex-wrap: wrap;
-  margin-top: 30px;
-}
-.link{
-  padding-top: 80px;
-  color: black;
-  text-decoration: none;
-}
-.items__cconteiner{
-  width: 30%;
 
-}
