--- a/src/components/Main/main.scss
+++ b/src/components/Main/main.scss
@@ -20,41 +20,6 @@
   }
 }
 
-.react-calendar {
-  width: 100%;
-  border: solid 1px grey;
-  border-radius: 15px;
-  padding-bottom: 20px;
-  &__navigation {
-    width: 70%;
-    margin: auto;
-    margin-bottom: 30px;
-    margin-top: 30px;
-    &__arrow {
-      border: none;
-      width: 30px;
-      background-color: white;
-      font-size: 20px;
-    }
-    &__label {
-      font-size: 20px;
-      text-transform: capitalize;
-      background-color: white;
-      border: none;
-    }
-  }
-  &__tile {
-    height: 50px;
-    background-color: white;
-    border: none;
-    font-size: 20px;
-  }
-  &__month-view__weekdays__weekday {
-    font-size: 20px;
-    font-weight: bold;
-  }
-}
-
 .active {
   border: solid 1px #4b51e6;
   border-radius: 60px;
@@ -104,3 +69,38 @@
   cursor: pointer;
   display: block;
 }
+
+.react-calendar {
+  width: 100%;
+  border: solid 1px grey;
+  border-radius: 15px;
+  padding-bottom: 20px;
+}
+  .react-calendar__navigation {
+    width: 70%;
+    margin: auto;
+    margin-bottom: 30px;
+    margin-top: 30px;
+    .react-calendar__navigation__arrow {
+      border: none;
+      width: 30px;
+      background-color: white;
+      font-size: 20px;
+    }
+    .react-calendar__navigation__label {
+      font-size: 20px;
+      text-transform: capitalize;
+      background-color: white;
+      border: none;
+    }
+  }
+  .react-calendar__tile {
+    height: 50px;
+    background-color: white;
+    border: none;
+    font-size: 20px;
+  }
+  .react-calendar__month-view__weekdays__weekday {
+    font-size: 20px;
+    font-weight: bold;
+  }
